--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ChuckNorris</title>
+  <title>AngularTemplate</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
+  <title>chuck-norris-angular-jokes</title>
 </head>
 <body>
-  <app-root></app-root>
+<my-app>loading</my-app>
 </body>
 </html>
